--- a/style.css
+++ b/style.css
@@ -265,11 +265,12 @@ h4 {
     transition: all 0.5s ease;
 }
 footer{
-    color: #c6c6c6;
+    color: #c6c6c6 !important;
     font-size: 18px !important;
 }
 .copyright{
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: Arial, Helvetica, sans-serif !important;
+    color: #FFFFFF !important;
 }
 /* Media QUuery for mobile navigation bar */
 @media (max-width: 991.98px) {
