--- a/style.css
+++ b/style.css
@@ -269,8 +269,24 @@ footer{
     font-size: 18px !important;
 }
 .copyright{
+    background-color: #af2424 !important;
     font-family: Arial, Helvetica, sans-serif !important;
     color: #FFFFFF !important;
+}
+.main-heading{
+    background-color: #af2424;
+    height: 140px;
+    color: #ffffff;
+}
+.about-heading {
+    font-size: 24px !important;
+}
+.about-content{
+    font-size: 16px;
+    font-family: roboto-black;
+}
+.border-btm{
+    border-bottom: 5px solid #af2424 !important;
 }
 /* Media QUuery for mobile navigation bar */
 @media (max-width: 991.98px) {
