--- a/style.css
+++ b/style.css
@@ -264,67 +264,93 @@ h4 {
     border-radius: 5px;
     transition: all 0.5s ease;
 }
-footer{
+
+footer {
     color: #c6c6c6 !important;
     font-size: 18px !important;
 }
-.copyright{
+
+.copyright {
     background-color: #af2424 !important;
     font-family: Arial, Helvetica, sans-serif !important;
     color: #FFFFFF !important;
 }
-.main-heading{
+
+.main-heading {
     background-color: #af2424;
     height: 140px;
     color: #ffffff;
 }
+
 .about-heading {
     font-size: 24px !important;
 }
-.about-content{
+
+.about-content {
     font-size: 16px;
     font-family: roboto-black;
 }
-.border-btm{
+
+.border-btm {
     border-bottom: 5px solid #af2424 !important;
 }
-.para{
+
+.para {
     font-family: roboto-black;
     font-weight: 800;
 }
-.service-li{
+
+.service-li ,
+.contact-li{
     font-family: Arial, Helvetica, sans-serif;
 }
+
+.logo-text:hover {
+    color: #af2424;
+}
+
+#contact .card:hover i,
+#contact .card:hover h4 {
+    color: #af2424;
+}
+
 /* Media QUuery for mobile navigation bar */
 @media (max-width: 991.98px) {
     .contact-info .contact-item {
         margin-right: 1rem;
     }
+
     .nav-link {
         margin: 0 0.5rem;
     }
+
     .center-sec p {
         font-family: Arial, Helvetica, sans-serif;
         font-size: 20px;
     }
+
     .mini-img {
         width: 190%;
     }
 }
 
 @media (max-width: 767.98px) {
+
     .main-nav .contact-info,
     .main-nav .social-links,
     .mini-nav .desktop-menu {
         display: none;
     }
+
     .mobile-menu-btn {
         display: block;
     }
+
     .center-sec p {
         font-family: Arial, Helvetica, sans-serif;
         font-size: 20px;
     }
+
     .mini-img {
         width: 120%;
     }
